__Version 1.0.0__
1. Initial working version

__Version 1.1.0__
1. Removed incorrect BS soup2 link
2. Fixed images